# mineland

./: .gitignore  README.md  bootstrap.sh  dev-deploy.sh  jsconfig.json  package-lock.json  package.json  tailwind.config.js
.parcel-cache/: 606aaff2e7a4a3a7.txt  6251670c1c354723  7eeea93e919819e8  data.mdb  de1b1f0e2ae64ed7  lock.mdb
contracts/: Cargo.toml  build.sh
contracts/ft/: Cargo.toml
contracts/ft/src/: lib.rs
contracts/main/: Cargo.toml
contracts/main/src/: collection.rs  ft.rs  lib.rs  mine.rs  stone.rs  utils.rs
contracts/nft-mine/: Cargo.toml
contracts/nft-mine/src/: lib.rs  metadata.rs  mint.rs
contracts/nft-stone/: Cargo.toml
contracts/nft-stone/src/: lib.rs  mint.rs  nft_core.rs
contracts/tests/sim/: collection.rs  land.rs  main.rs  utils.rs  zombie.rs
public/: index.html  manifest.json
src/: app.jsx  index.html  index.js  manifest.json
src/assets/styles/: card.jsx  collection.jsx  common.style.jsx  home.style.jsx  index.css
src/components/: ButtonGroup.jsx  Footer.jsx  Header.jsx  InnerPageHead.jsx  Popup.jsx  Price.jsx  SocialLinks.jsx
src/components/basic/: Button.jsx  Dropdown.jsx  Loader.jsx
src/components/card/: BackCard.jsx  Card.jsx  CardDropdown.jsx  FrontCard.jsx
src/components/sidebar/: SellItem.jsx  Sidebar.jsx
src/near/: api.js  config.js
src/pages/: ContactUs.jsx  Faq.jsx  Privacy.jsx  Terms.jsx  Token.jsx  index.js
src/pages/collections/: Collections.jsx
src/pages/landing/: HowToPlaySection.jsx  Landing.jsx  RoadmapSection.jsx  Section.jsx
src/utils/: content.js  index.js
(+5 files in other folders)
