[package]
name = "zommine"
version = "0.1.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2018"

[dependencies]
near-sdk = "3.1.0"
near-contract-standards = "3.2.0"
ft = { path = "./ft" }
main = { path = "./main" }
nft-mine = { path = "./nft-mine" }
nft-stone = { path = "./nft-stone" }

[dev-dependencies]
near-sdk-sim = "3.1.0"

[workspace]
members = ["ft", "main", "nft-mine", "nft-stone"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
